--- a/Slider/css/style.css
+++ b/Slider/css/style.css
@@ -5,6 +5,7 @@
 .custom_slider .outer_container .inner_container {
   width: 8000px;
   display: flex;
+  transition: transform 0.5s ease-in;
 }
 .custom_slider .one_slide {
   display: flex;
