--- a/Slider/css/style.less
+++ b/Slider/css/style.less
@@ -2,6 +2,9 @@
     .outer_container {
         overflow: hidden;
         margin: 0 auto;
+        .no_transition {
+            transition: none !important;
+          }
         .inner_container {
             width: 8000px;
             display: flex;
